Fix background stretching

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -11,12 +11,14 @@
 html,
 body {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
 }
 
 body {
   font-family: 'Lato', 'Helvetica Neue', 'Arial', sans-serif;
   color: $font-color;
+  background-image: linear-gradient(to bottom right, #ffca34 0%, #ffb32c 100%);
+  background-color: #ffb32c;
 }
 
 a, a:visited {
@@ -25,11 +27,6 @@ a, a:visited {
 
 .install-button {
   display: inline-block;
-}
-
-.colored {
-  background-image: linear-gradient(to bottom right, #ffca34 0%, #ffb32c 100%);
-  background-color: #ffb32c;
 }
 
 header {
@@ -56,11 +53,16 @@ header {
   }
 }
 
-.main {
-  padding: 3rem 1rem;
-  max-width: $content-width;
-  margin: 0 auto;
+.main-wrapper {
+  background-color: white;
+
+  .main {
+    padding: 3rem 1rem;
+    max-width: $content-width;
+    margin: 0 auto;
+  }
 }
+
 
 footer {
   padding: 2.5rem;
